- Fixed bug #35906 (win32: mail() Date: header is not RFC compliant)